fix artifacts location on buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,5 @@
 version: 0.2
 
-env:
-  variables:
-    BUILD_ENV: "prod"
-
 phases:
   install:
     commands:
@@ -15,20 +11,10 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - ng build --env=${BUILD_ENV}
-  post_build:
-    commands:
-      - command
-      - command
+      - ng build --prod
 artifacts:
   files:
-    - location
-    - location
-  discard-paths: yes
-  base-directory: location
-cache:
-  paths:
     - '**/*'
-  base-directory: 'dist'
   discard-paths: yes
+  base-directory: 'dist'
   
